Interface Pura: Monitor agora usa comandos graficos nativos LNX e atalho independente

--- a/aplicativos/notebook_monitor/ulx-monitor.desktop
+++ b/aplicativos/notebook_monitor/ulx-monitor.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Name=ULX Notebook Monitor
 Comment=Monitor de Sistema Nativo ULX/LNX
-Exec=konsole --hold -e ulx-notebook-monitor
+Exec=ulx-notebook-monitor
 Icon=utilities-system-monitor
-Terminal=false
+Terminal=true
 Type=Application
 Categories=System;Monitor;
 Keywords=system;monitor;ulx;lnx;
